fix body and html issues(horizontal scroll issue on laptops)

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,12 +5,14 @@ body {
     font-family: sans-serif;
     line-height: 1.6;
     font-size: 16px;
+    height: 100vh;
+    width: 100vw;
 }
 
 body {
     background-color: #f4f4f4;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 * {
